# djust-designer

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
demo/: manage.py
demo/demo_project/: settings.py  urls.py  wsgi.py
demo/templates/demo/: home.html
djust_designer/: __init__.py  apps.py  mcp.py  middleware.py
djust_designer/bridge/: urls.py  views.py
djust_designer/edit/: snapshot.py
djust_designer/static/djust_designer/: overlay.css  overlay.js
djust_designer/templatetags/: djust_designer_tags.py
docs/: HANDOFF.md
docs/superpowers/plans/: 2026-07-09-zdesign-p1-mvp.md
docs/superpowers/specs/: 2026-07-09-zdesign-design.md
tests/: conftest.py  settings.py  test_classedit.py  test_djust_designer_tags.py  test_loader.py  test_middleware.py  test_paths.py  test_registry.py  test_scanner.py  test_snapshot.py  test_views.py  test_zdesign_tags.py
tests/fixtures/templates/: home.html
zdesign/: apps.py  mcp.py  middleware.py  urls.py
zdesign/bridge/: urls.py  views.py
zdesign/edit/: classedit.py  paths.py  snapshot.py
zdesign/instrument/: loader.py  registry.py  scanner.py
zdesign/static/zdesign/: overlay.css  overlay.js
zdesign/templatetags/: zdesign_tags.py
