[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "djust-designer"
version = "0.1.0"
description = "Visual design collaboration layer for djust / Django — point at the page, edit the source."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "szto", email = "sztolabs@gmail.com" }]
keywords = ["django", "djust", "tailwind", "design", "visual-editing", "mcp", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["Django>=5.0"]

[project.urls]
Homepage = "https://github.com/szto/djust-designer"
Repository = "https://github.com/szto/djust-designer"
Issues = "https://github.com/szto/djust-designer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
    "ruff>=0.6",
    "ty>=0.0.18",
    "build>=1.2",
    "twine>=5.1",
]
mcp = [
    "mcp>=1.0",
]
djust = [
    "djust>=0.1",
]

[project.scripts]
djust-designer-mcp = "djust_designer.mcp:main"

[tool.setuptools.packages.find]
include = ["djust_designer*"]

[tool.setuptools.package-data]
djust_designer = ["static/djust_designer/*", "templates/**/*"]

# --- ruff ----------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".djust_designer", "demo/demo_project/wsgi.py"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "TID",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- ty ------------------------------------------------------------------
[tool.ty.analysis]
replace-imports-with-any = ["django.**", "mcp.**"]
